--- a/app/index.html
+++ b/app/index.html
@@ -416,6 +416,58 @@
         <a class="product__link" href="#">LOAD MORE</a>
       </div>
     </section>
+    <div class="promo">
+      <div class="container">
+        <div class="promo__inner">
+          <p class="promo__subtitle">STYLE FASHION</p>
+          <h3 class="title">DEAL OF THE DAY</h3>
+          <div class="promo__clock" data-time="2022-02-28">
+            <div class="promo__clock-item">
+              <span class="promo__days"></span>
+              <div class="promo__text">Days</div>
+            </div>
+            <div class="promo__clock-item">
+              <span class="promo__hours"></span>
+              <div class="promo__text">Hours</div>
+            </div>
+            <div class="promo__clock-item">
+              <span class="promo__minutes"></span>
+              <div class="promo__text">Minutes</div>
+            </div>
+            <div class="promo__clock-item">
+              <span class="promo__seconds"></span>
+              <div class="promo__text">Seconds</div>
+            </div>
+          </div>
+          <a class="promo__link" href="#">SHOP NOW</a>
+        </div>
+      </div>
+    </div>
+    <div class="partners">
+      <div class="container">
+        <ul class="partners__list">
+          <li class="pratners__item">
+            <img src="images/content/partners/1.png" alt="partner logo">
+          </li>
+          <li class="pratners__item">
+            <img src="images/content/partners/2.png" alt="partner logo">
+          </li>
+          <li class="pratners__item">
+            <img src="images/content/partners/3.png" alt="partner logo">
+          </li>
+          <li class="pratners__item">
+            <img src="images/content/partners/4.png" alt="partner logo">
+          </li>
+          <li class="pratners__item">
+            <img src="images/content/partners/5.png" alt="partner logo">
+          </li>
+          <li class="pratners__item">
+            <img src="images/content/partners/6.png" alt="partner logo">
+          </li>
+        </ul>
+      </div>
+    </div>
+    
 
 
 
