added shop page

--- a/app/index.html
+++ b/app/index.html
@@ -250,12 +250,22 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-             <div class="product-item__price">
-               <div class="product-item__new-price">$34.00</div>
-               <div class="product-item__old-price">$27.00</div>
-             </div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, incidunt?
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
+            </div>
           </div>
           <div class="product-item product-item--sale">
             <div class="product-item__img-box">
@@ -281,11 +291,21 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, incidunt?
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product-item">
@@ -312,11 +332,21 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, incidunt?
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product-item product-item--sale">
@@ -343,11 +373,21 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, incidunt?
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product-item">
@@ -374,11 +414,21 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, incidunt?
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
           <div class="product-item product-item--sale">
@@ -405,11 +455,21 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, incidunt?
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
         </div>
