--- a/app/blog-one.html
+++ b/app/blog-one.html
@@ -80,82 +80,122 @@
       </div>
     </section>
 
-    <section class="blog-page">
+    <section class="blog-page blog-one">
       <div class="container">
         <div class="blog-page__inner">
-          <div class="blog-page__content">
-            <div class="blog-page__item">
-              <a class="blog-page__item-link" href="#">
-                <img class="blog-page__img" src="images/blog/page-1.jpg" alt="blog-image">
-              </a>
-              <div class="blog-page__item-box">
-                <h4 class="blog-page__item-title">
-                  <a class="blog-page__item-link" href="#">
-                Be prepared to seat a lot, but at least in the Southern regions there's a good chance you'll get to enjoy!</a>
-              </h4>  
-                <div class="blog-box">
-                  <a class="blog-box__author" href="#">By Admin</a>
-                  <div class="blog-box__date">10 January, 2020</div>
-                </div>
-                <p class="blog-page__item-text">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio necessitatibus corrupti laborum sapiente ut debitis quas corporis deserunt ea nesciunt dolorem expedita illum quidem cupiditate et, provident consequatur eum hic.
-                </p>
+          <div class="blog-page__content blog-one__content">
+            <img class="blog-page__img" src="images/blog/page-1.jpg" alt="blog-image">
+            <div class="blog-one__text">
+              <ul class="blog-one__info">
+                <li class="blog-one__info-item">
+                  <a class="blog-one__info-link" href="#">16 February, 2020</a>
+                </li>
+                <li class="blog-one__info-item">
+                  <a class="blog-one__info-link blog-one__info-link--comment" href="#">3 comment</a>
+                </li>
+                <li class="blog-one__info-item">
+                  <a class="blog-one__info-link blog-one__info-link--author" href="#">By Admin</a>
+                </li>
+              </ul>
+              <h4>In Particular The Global World Of Lorem Ipsum Asap Tempor</h4>
+              <p>Lorem ipsum dolor siit amet, consectetur adiscing elit, sed do eiusmod tempor incididunt more utmm labore et dolore
+              magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ecenas accumsan lacus vel facilisis. Quis ipsum
+              suspenidisse ultrices gravida. Risus comdouma viverra more maecenas accumsan lacus vel facilisis.</p>
+              <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elt, sed does eiusmod tempor incididunt ut labore et dolore magna
+              aliqua dilo. Quis ipsum suspendisse ultrices gravida.</blockquote>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt of in utmm labore et dolore
+              magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ecenas accumsan lacus vel facilisis. Quis ipsum
+              suspendisse ultrices gravida. Risus comdoumar viverra more maecenas accumsan lacus vel facilisis.</p>
+              <img class="blog-one__left-img" src="images/blog/blog-one.jpg" alt="">
+              <p>Lorem ipsum dolor sit amet, consectur picing elit, sed do eusmod tempor incididunt ut mor more labore a doore magna
+              aliqua. Quis into ipsum the suspendisse ultrices grda. Lorem in ipsum dolor sit amet, consectetur adipiscings elit, sed
+              does eiusmod tempor incididunt mod labore et dolore magna aliqua. Quis ipsum in suspendisse fass a ultrices gravida.
+              Loremon ipsum dolor st amaiet, consectetur aipiscinge elit, sed do eiusobimod tempor incididunt uts labore et doloroe
+              gravida.</p>
+            </div>
+            
+
+            <div class="blog-one__box">
+              <div class="blog-one__tags">
+                <span>TAGS:</span> <a href="#">Fashion</a>, <a href="#">Style</a>
+              </div>
+              <div class="blog-one__share">
+                <span>SHARE:</span>
+                <a href="#">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#twitter"></use>
+                  </svg>
+                </a>
+                <a href="#">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#linkedin"></use>
+                  </svg>
+                </a>
+                <a href="#">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#google"></use>
+                  </svg>
+                </a>
+                <a href="#">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#pinterest"></use>
+                  </svg>
+                </a>   
               </div>
             </div>
-            <div class="blog-page__item">
-              <a class="blog-page__item-link" href="#">
-                <img class="blog-page__img" src="images/blog/page-2.jpg" alt="blog-image">
-              </a>
-              <div class="blog-page__item-box">
-                <h4 class="blog-page__item-title">
-                  <a class="blog-page__item-link" href="#">
-                Be prepared to seat a lot, but at least in the Southern regions there's a good chance you'll get to enjoy!</a>
-              </h4>  
-                <div class="blog-box">
-                  <a class="blog-box__author" href="#">By Admin</a>
-                  <div class="blog-box__date">10 January, 2020</div>
-                </div>
-                <p class="blog-page__item-text">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio necessitatibus corrupti laborum sapiente ut debitis quas corporis deserunt ea nesciunt dolorem expedita illum quidem cupiditate et, provident consequatur eum hic.
-                </p>
+            <div class="blog-one__author">
+              <img class="blog-one__author-img" src="images/blog/author.jpg" alt="author">
+              <div class="blog-one__author-info">
+                <h5 class="blog-one__author-name">JHON DOE</h5>
+                <p class="blog-one__author-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo dajsna for tempor incididunt ut labore et dolore
+                magna aliqua. Quis ipsum more in the a mo spendisse ultrices gravida. Risus commodo.</p>
               </div>
             </div>
 
-            <div class="blog-page__item blog-page__item--slider">
-              <div class="blog-page__slider">
-                <img class="blog-page__img" src="images/blog/page-3.jpg" alt="blog-image">
-                <img class="blog-page__img" src="images/blog/page-2.jpg" alt="blog-image">
-                <img class="blog-page__img" src="images/blog/page-1.jpg" alt="blog-image">
-              </div>
-              <div class="blog-page__item-box">
-                <h4 class="blog-page__item-title">
-                  <a class="blog-page__item-link" href="#">
-                Be prepared to seat a lot, but at least in the Southern regions there's a good chance you'll get to enjoy!</a>
-              </h4>  
-                <div class="blog-box">
-                  <a class="blog-box__author" href="#">By Admin</a>
-                  <div class="blog-box__date">10 January, 2020</div>
+            <div class="comments__title">02 COMMENTS</div>
+            <div class="comments">
+              <img class="comments__img" src="images/avatar/1.jpg" alt="avatar">
+              <div class="comments__content">
+                <div class="comments__content-top">
+                  <p class="comments__content-name">Michle Jhon</p>
+                  <p class="comments__content-date">2 days ago</p>
+                  <div class="star comments__content-star" data-rateyo-rating="4"></div>
                 </div>
-                <p class="blog-page__item-text">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio necessitatibus corrupti laborum sapiente ut debitis quas corporis deserunt ea nesciunt dolorem expedita illum quidem cupiditate et, provident consequatur eum hic.
+                <p class="comments__content-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas quibusdam expedita omnis a, reiciendis aliquam
+                  modi porro impedit ipsa consequuntur incidunt minima saepe, consectetur temporibus, aspernatur accusamus quos sed
+                  eius.
                 </p>
+                <a class="comments__content-reply" href="#">Reply</a>
               </div>
             </div>
-            <div class="blog-page__item blog-page__item--no-image">
-              <div class="blog-page__item-box">
-                <h4 class="blog-page__item-title">
-                  <a class="blog-page__item-link" href="#">
-                Be prepared to seat a lot, but at least in the Southern regions there's a good chance you'll get to enjoy!</a>
-              </h4>  
-                <div class="blog-box">
-                  <a class="blog-box__author" href="#">By Admin</a>
-                  <div class="blog-box__date">10 January, 2020</div>
+            <div class="comments">
+              <img class="comments__img" src="images/avatar/2.jpg" alt="avatar">
+              <div class="comments__content">
+                <div class="comments__content-top">
+                  <p class="comments__content-name">Michle Jhon</p>
+                  <p class="comments__content-date">2 days ago</p>
+                  <div class="star comments__content-star" data-rateyo-rating="4"></div>
                 </div>
-                <p class="blog-page__item-text">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio necessitatibus corrupti laborum sapiente ut debitis quas corporis deserunt ea nesciunt dolorem expedita illum quidem cupiditate et, provident consequatur eum hic.
+                <p class="comments__content-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas quibusdam expedita omnis a, reiciendis aliquam
+                  modi porro impedit ipsa consequuntur incidunt minima saepe, consectetur temporibus, aspernatur accusamus quos sed
+                  eius.
                 </p>
+                <a class="comments__content-reply" href="#">Reply</a>
               </div>
             </div>
+
+            <form class="comments-form action">
+              <p class="blog-one__form-title">LEAVE A REPLY</p>
+              <div class="comments-form__box-input">
+                <input class="comments-form__text-input" type="text" placeholder="Your name">
+                <input class="comments-form__text-input" type="text" placeholder="E-mail address">
+              </div>
+              <textarea class="comments-form__textarea" placeholder="Your text here"></textarea>
+              <button class="comments-form__btn" type="submit">POST COMMENT</button>
+            </form>
+
 
           </div>
           <div class="blog-page__aside">
